Fix width issue on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -69,7 +69,6 @@ table {
 	display: flex;
 	justify-content: center;
 }
-
 .removeDecor() {
 	text-decoration: none;
 	color: black;
@@ -109,7 +108,7 @@ p, h3, a, ol, ul, table {
 
 ul {
 	list-style-type: circle;
-	margin-left: 25px;
+	margin-left: 50px;
 }
 
 // Nested
@@ -179,13 +178,17 @@ body {
 
 .firstrow {
 	margin-bottom: 15px;
+	margin-top: 15px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 }
 
-.introduction {
-	margin-bottom: 15px;
-	width: 50%;
+.introduction, .skills {
+	.center();
+	flex-direction: column;
+	text-align: center;
+	width: 49%;
+	height: 25%;
 }
 
 // Nested
@@ -196,6 +199,7 @@ body {
 	h2 {
 	text-align: center;
 	margin-bottom: 15px;
+	margin-top: 15px;
 }
 }
 
